
        # In 'creme_core.core.entity_filter.condition_handler' :
            - The attribute 'BaseCustomFieldConditionHandler._custom_field_id', has been replaced by '_custom_field_uuid'.
            - In the class 'RelationConditionHandler', these attributes have been replaced :
                - _entity_id => _entity_uuid
                - _ct_id => _ct_key
        # In the model 'creme_core.models.fields_config.FieldsConfig', the attributes "_excluded_fnames" & "_required_fnames" have been removed.
        # Apps :
            * Creme_config :
                - The value of class attribute "id" of several Brick classes (for bricks configuration) have changed (mainly "block" => "brick").


== Version 2.5 ==

  UPGRADE NOTE :
    - You should create a all new virtual environment based on Python 3.8+ .

  Users side :
  ------------
    # The version of Django has been upgraded to "4.2".
    # A visitor mode has been added; from any list-view, you can visit all the related detail-views the one after the other.
      (button "Enter the exploration mode" in list-views).
    # The link in the list-views selectors are now opened in other tabs automatically.
    # In forms :
        - The custom fields with ENUM/MULTI_ENUM type are now using the Select2 combobox with lazy loading & search.
        - In the form for entity-filters :
            - The regular fields corresponding to foreign keys ('Sector', 'Status', ...) are now using the Select2 combobox with lazy loading & search.
            - The regular fields with static choices (like 'Discount' in billing lines) are now using combobox instead of a text input.
    # Apps :
        * Creme_config :
            - Each CustomForm can now be reset (to set the fields it would have have after a fresh installation).
            - In the Users' configuration page :
                - The displayed name of Users can now be customised (per user);